--- a/configs/finetune/cartnet/cartnet.yaml
+++ b/configs/finetune/cartnet/cartnet.yaml
@@ -2,15 +2,16 @@ SOLVER:
   SEED: 42
   EPOCHS: 100
   LR: 0.001
-  BATCH_SIZE: 32
+  BATCH_SIZE: 64
   NUM_RUNS: 1
-  NUM_FOLDS: 5
+  NUM_FOLDS: 10
   RANDOMIZE: True
   TASK: "regression"  # Choices: ['regression', 'classification']
   DISABLE_CUDA: False
   WORKERS: 4
   START_EPOCH: 0
-  LR_MILESTONES: [50, 75]
+  # LR_MILESTONES: [50, 75]
+  MOMENTUM: 0.9
   WEIGHT_DECAY: 0.0
   PRINT_FREQ: 10
   RESUME: ""
@@ -18,7 +19,7 @@ SOLVER:
 
 MODEL:
   NAME: "cartnet"  # Choices: ['cgcnn', 'leftnet', 'cartnet', 'logistic', 'random_forest']
-  PRETRAINED_MODEL_PATH: ""
+  PRETRAINED_MODEL_PATH: "saved_models/cartnet/best.ckpt"
   INIT_FILE: 'cif_file/atom_init.json'
   CIF_FOLDER: "cif_file"
   MAX_NBRS: 12
